# omega-raytrace

./: CMakeLists.txt
.github/workflows/: build.yml
src/: raytrace.c
